--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.home.HomeFragment">
-<!--    <data>-->
-<!--        <variable-->
-<!--            name="viewModel"-->
-<!--            type="com.mohammed.cars.ui.vehicles.VehiclesViewModel" />-->
-<!--    </data>-->
+    <data>
+        <variable
+            name="viewModel"
+            type="com.mohammed.cars.ui.vehicles.VehiclesViewModel" />
+    </data>
     <ScrollView
         android:id="@+id/scroll1"
         android:layout_height="match_parent"
@@ -77,19 +77,25 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/search_bar"/>
 
-
-<!--                <androidx.recyclerview.widget.RecyclerView-->
-<!--                    android:id="@+id/newAddedView"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginTop="8dp"-->
-<!--                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent"-->
-<!--                    app:layout_constraintStart_toStartOf="parent"-->
-<!--                    app:layout_constraintTop_toBottomOf="@+id/newAddedText"-->
-<!--                    app:layout_goneMarginTop="20dp"-->
-<!--                    app:listData="@{viewModel.vehicleslist}"-->
-<!--                    tools:listitem="@layout/item_vehichle"/>-->
+                <ProgressBar
+                    android:id="@+id/loading_spinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:isNetworkError = "@{safeUnbox(viewModel.eventNetworkError)}"
+                    app:playlist = "@{viewModel.vehicleslist}"
+                    android:layout_gravity="center"
+                    />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/newAddedView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/newAddedText"
+                    app:layout_goneMarginTop="20dp"
+                    tools:listitem="@layout/item_vehichle"/>
 
 <!--                <TextView-->
 <!--                    android:layout_marginTop="20dp"-->
@@ -114,14 +120,14 @@
 <!--                    tools:listitem="@layout/item_vehichle"-->
 <!--                    app:layout_goneMarginTop="20dp" />-->
 
-<!--                <Button-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="40dp"-->
-<!--                    android:layout_marginStart="4dp"-->
-<!--                    android:layout_marginTop="186dp"-->
-<!--                    android:text="Search"-->
-<!--                    app:layout_constraintStart_toEndOf="@+id/search_bar"-->
-<!--                    app:layout_constraintTop_toTopOf="parent"/>-->
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="186dp"
+                    android:text="Search"
+                    app:layout_constraintStart_toEndOf="@+id/search_bar"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
