--- a/app/src/main/res/layout/fragment_vehicles.xml
+++ b/app/src/main/res/layout/fragment_vehicles.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".VehiclesFragment">
-<!--    <data>-->
-<!--        <variable-->
-<!--            name="viewModel"-->
-<!--            type="com.mohammed.cars.ui.vehicles.VehiclesViewModel" />-->
-<!--    </data>-->
+    <data>
+        <variable
+            name="viewModel"
+            type="com.mohammed.cars.ui.vehicles.VehiclesViewModel" />
+    </data>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,16 +27,24 @@
             app:layout_constraintTop_toTopOf="parent"
             />
 
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/vehiclesView"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"-->
-<!--            app:spanCount="2"-->
-<!--            app:listData="@{viewModel.vehicleslist}"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/vehicle_banner"-->
-<!--            />-->
+        <ProgressBar
+            android:id="@+id/loading_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:isNetworkError = "@{safeUnbox(viewModel.eventNetworkError)}"
+            app:playlist = "@{viewModel.vehicleslist}"
+            android:layout_gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/vehiclesView"
+            app:layout_constraintStart_toStartOf="parent"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/vehiclesView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/vehicle_banner"
+            />
 
 
 
