--- a/app/src/main/res/layout/item_vehichle.xml
+++ b/app/src/main/res/layout/item_vehichle.xml
@@ -2,105 +2,100 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<TextView
+
+    <data>
+        <variable
+            name="Vehicle"
+            type="com.mohammed.cars.domain.DevByteVehicles" />
+        <variable
+            name="clickListener"
+            type="com.mohammed.cars.ui.home.VehicleListener" />
+    </data>
+
+<androidx.cardview.widget.CardView
+    android:id="@+id/card"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="hello">
+    android:layout_margin="10dp"
+    android:onClickListener="@{() -> clickListener.onClick(Vehicle)}"
+    android:padding="1dp"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp"
+    >
 
-</TextView>
-<!--    <data>-->
-<!--        <variable-->
-<!--            name="Vehicle"-->
-<!--            type="com.mohammed.cars.domain.DevByteVehicles" />-->
-<!--&lt;!&ndash;        <variable&ndash;&gt;-->
-<!--&lt;!&ndash;            name="clickListener"&ndash;&gt;-->
-<!--&lt;!&ndash;            type="com.mohammed.cars.ui.home.VehicleClick" />&ndash;&gt;-->
-<!--    </data>-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cardView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-<!--&lt;!&ndash;<androidx.cardview.widget.CardView&ndash;&gt;-->
-<!--&lt;!&ndash;    android:id="@+id/card"&ndash;&gt;-->
-<!--&lt;!&ndash;    android:layout_width="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;    android:layout_height="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;    android:layout_margin="10dp"&ndash;&gt;-->
-<!--&lt;!&ndash;    android:onClickListener="@{() -> clickListener.onClick(Vehicle)}"&ndash;&gt;-->
-<!--&lt;!&ndash;    android:padding="1dp"&ndash;&gt;-->
-<!--&lt;!&ndash;    app:cardCornerRadius="5dp"&ndash;&gt;-->
-<!--&lt;!&ndash;    app:cardElevation="5dp"&ndash;&gt;-->
-<!--&lt;!&ndash;    >&ndash;&gt;-->
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="170dp"
+            android:layout_height="170dp"
+            android:scaleType="fitXY"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars"
+            app:imageUrl="@{Vehicle.imge}"/>
 
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:id="@+id/cardView"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="vertical"-->
-<!--        android:padding="5dp"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            tools:text="@{Vehicle.model}" />
 
-<!--        <ImageView-->
-<!--            android:id="@+id/imageView"-->
-<!--            android:layout_width="170dp"-->
-<!--            android:layout_height="170dp"-->
-<!--            android:scaleType="fitXY"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            tools:srcCompat="@tools:sample/avatars"-->
-<!--            app:imageUrl="@{Vehicle.imgSrcUrl}"/>-->
+        <TextView
+            android:id="@+id/year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{Vehicle.year}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
-<!--        <TextView-->
-<!--            android:id="@+id/textView"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/imageView"-->
-<!--            tools:text="@{Vehicle.model}" />-->
+        <TextView
+            android:id="@+id/fuel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{Vehicle.fuel}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/Passengers"
+            app:layout_constraintStart_toEndOf="@+id/year"
+            app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
-<!--        <TextView-->
-<!--            android:id="@+id/year"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="@{Vehicle.year}"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/textView"/>-->
+        <TextView
+            android:id="@+id/Passengers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{Vehicle.passenger}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView">
 
-<!--        <TextView-->
-<!--            android:id="@+id/fuel"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="@{Vehicle.fuel}"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toStartOf="@+id/Passengers"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/year"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/textView"/>-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/Passengers"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="@{Vehicle.passenger}"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/textView">-->
-
-<!--        </TextView>-->
+        </TextView>
 
 
 
-<!--        &lt;!&ndash;        <Button&ndash;&gt;-->
-<!--        &lt;!&ndash;            android:id="@+id/button"&ndash;&gt;-->
-<!--        &lt;!&ndash;            android:layout_width="60dp"&ndash;&gt;-->
-<!--        &lt;!&ndash;            android:layout_height="35dp"&ndash;&gt;-->
-<!--        &lt;!&ndash;            android:text="Button"&ndash;&gt;-->
-<!--        &lt;!&ndash;            app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
-<!--        &lt;!&ndash;            app:layout_constraintStart_toStartOf="parent" />&ndash;&gt;-->
+        <!--        <Button-->
+        <!--            android:id="@+id/button"-->
+        <!--            android:layout_width="60dp"-->
+        <!--            android:layout_height="35dp"-->
+        <!--            android:text="Button"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent" />-->
 
-<!--        &lt;!&ndash;        <Button&ndash;&gt;-->
-<!--        &lt;!&ndash;            android:id="@+id/button2"&ndash;&gt;-->
-<!--        &lt;!&ndash;            android:layout_width="60dp"&ndash;&gt;-->
-<!--        &lt;!&ndash;            android:layout_height="35dp"&ndash;&gt;-->
-<!--        &lt;!&ndash;            android:text="Button"&ndash;&gt;-->
-<!--        &lt;!&ndash;            app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
-<!--        &lt;!&ndash;            app:layout_constraintEnd_toEndOf="parent" />&ndash;&gt;-->
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+        <!--        <Button-->
+        <!--            android:id="@+id/button2"-->
+        <!--            android:layout_width="60dp"-->
+        <!--            android:layout_height="35dp"-->
+        <!--            android:text="Button"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent" />-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--</androidx.cardview.widget.CardView>-->
+</androidx.cardview.widget.CardView>
 </layout>
