--- a/app/src/main/res/layout/item_vehichle.xml
+++ b/app/src/main/res/layout/item_vehichle.xml
@@ -9,7 +9,7 @@
             type="com.mohammed.cars.domain.DevByteVehicles" />
         <variable
             name="clickListener"
-            type="com.mohammed.cars.ui.home.VehicleListener" />
+            type="com.mohammed.cars.ui.home.VehicleClick" />
     </data>
 
 <androidx.cardview.widget.CardView
